--- a/e/talk/assets/css/style.css
+++ b/e/talk/assets/css/style.css
@@ -21,10 +21,10 @@ body.light-theme,
     --tabletWidth: (max-width: 900px);
 }
 .main-title {
-    color: white; /* 设置文字颜色为白色 */
+    color: Black; /* 设置文字颜色为白色 */
 }
 .total{
-    color: white; /* 设置文字颜色为白色 */
+    color: Black; /* 设置文字颜色为白色 */
 }
 .footer {
     color: white; /* 设置 footer 中的文字颜色为白色 */
