--- a/e/talk/assets/css/style.css
+++ b/e/talk/assets/css/style.css
@@ -14,7 +14,7 @@ body.light-theme,
     --color-border-default: #d0d7de;
     --color-border-muted: #d8dee4;
     --color-post-preview: #fff;
-    --color-memos-pre-bg: #f3f4f6;
+   
 
     /* variables for js, must be the same as these in @custom-media queries */
     --phoneWidth: (max-width: 684px);
@@ -111,7 +111,18 @@ body {
     position: relative; /* 确保相对定位 */
 }
 
-
+/* 添加一个透明度和背景色的覆盖层 */
+body::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: inherit; /* 继承背景 */
+    filter: blur(20px); /* 应用模糊效果 */
+    z-index: -1; /* 确保在内容下方 */
+}
 
 /* 手机尺寸 */
 @media (max-width: 800px) {
